--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="login">
         <div class="login-inner">
-            <div class="logo"><img src="public/image/woowa_logo.png" alt=""></div>
+            <!-- <div class="logo"><img src="public/image/woowa_logo.png" alt=""></div> -->
 
             <div class="login-text">
                 <div class="login1">Login</div>
